src/test/ui/marker_trait_attr/marker-attribute-on-non-trait.stderr
error: attribute can only be applied to a trait
  --> $DIR/marker-attribute-on-non-trait.rs:3:1
   |
LL | #[marker]
   | ^^^^^^^^^
LL | struct Struct {}
   | ---------------- not a trait

error: attribute can only be applied to a trait
  --> $DIR/marker-attribute-on-non-trait.rs:6:1
   |
LL | #[marker]
   | ^^^^^^^^^
LL | impl Struct {}
   | -------------- not a trait

error: attribute can only be applied to a trait
  --> $DIR/marker-attribute-on-non-trait.rs:9:1
   |
LL |   #[marker]
   |   ^^^^^^^^^
LL | / union Union {
LL | |     x: i32,
LL | | }
   | |_- not a trait

error: attribute can only be applied to a trait
  --> $DIR/marker-attribute-on-non-trait.rs:14:1
   |
LL | #[marker]
   | ^^^^^^^^^
LL | const CONST: usize = 10;
   | ------------------------ not a trait

error: attribute can only be applied to a trait
  --> $DIR/marker-attribute-on-non-trait.rs:17:1
   |
LL | #[marker]
   | ^^^^^^^^^
LL | fn function() {}
   | ---------------- not a trait

error: attribute can only be applied to a trait
  --> $DIR/marker-attribute-on-non-trait.rs:20:1
   |
LL | #[marker]
   | ^^^^^^^^^
LL | type Type = ();
   | --------------- not a trait

error: aborting due to 6 previous errors

